--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 altair==4.2.2
+astroid==3.2.4
 asttokens==2.4.1
 attrs==24.2.0
+autopep8==2.3.1
 blinker==1.8.2
 cachetools==5.4.0
 certifi==2024.7.4
@@ -10,6 +12,7 @@ colorama==0.4.6
 comm==0.2.2
 debugpy==1.8.5
 decorator==5.1.1
+dill==0.3.8
 entrypoints==0.4
 et-xmlfile==1.1.0
 executing==2.0.1
@@ -18,6 +21,7 @@ GitPython==3.1.43
 idna==3.7
 ipykernel==6.29.5
 ipython==8.26.0
+isort==5.13.2
 jedi==0.19.1
 Jinja2==3.1.4
 jsonschema==4.23.0
@@ -27,6 +31,7 @@ jupyter_core==5.7.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.7
+mccabe==0.7.0
 mdurl==0.1.2
 narwhals==1.3.0
 nest-asyncio==1.6.0
@@ -37,13 +42,16 @@ pandas==2.2.2
 parso==0.8.4
 pillow==10.4.0
 platformdirs==4.2.2
+plotly==5.23.0
 prompt_toolkit==3.0.47
 protobuf==5.27.3
 psutil==6.0.0
 pure_eval==0.2.3
 pyarrow==17.0.0
+pycodestyle==2.12.1
 pydeck==0.9.1
 Pygments==2.18.0
+pylint==3.2.6
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 pytz==2024.1
@@ -59,6 +67,7 @@ streamlit==1.37.1
 streamlit-aggrid==1.0.5
 tenacity==8.5.0
 toml==0.10.2
+tomlkit==0.13.2
 toolz==0.12.1
 tornado==6.4.1
 traitlets==5.14.3
